--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.0.6
   sqflite: ^2.0.0+3
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.22.0
+  cloud_firestore: ^3.5.0
 
 dev_dependencies:
   flutter_test:
